feat(kernel): bind kernel:* to the KernelDiagnostics NDJSON CLI — close 0.4.0
The kernel:* family moves from definition-only placeholders to a live,
read-only, cap-blind introspection surface over a child
exeris-kernel-diagnostics-cli (exeris-kernel v0.9.0, ADR-033).

Transport (src/transport/):
- ndjson-framing.ts: newline-delimited JSON codec (StringDecoder for
  multibyte-safe line splitting); distinct from the LSP Content-Length framing.
- kernel-adapter.ts: KernelAdapter over NDJSON. The CLI protocol carries no id,
  so responses correlate FIFO. A request timeout or framing desync SOFT-RESETS
  the adapter (kill child, next call re-spawns) rather than misaligning the
  queue or bricking the family on a slow cold JVM boot; CLI-gone (spawn-error /
  exit / dispose) stays sticky. An epoch counter guards against a killed
  child's late callbacks corrupting the channel that replaced it. Typed
  KernelRequestError ({"error":...}) / KernelTransportError.

Tools (src/tools/kernel/):
- shapes.ts: validators mirrored 1:1 from eu.exeris.kernel.spi.diagnostics.*
  (schemaVersion "1.0") — ProvidersSnapshot / BootstrapDagSnapshot /
  SubsystemSnapshot; re-emit only contract fields, nullable displayName, null
  subsystem is a clean not-found.
- index.ts: kernel:list_providers / kernel:get_bootstrap_dag /
  kernel:describe_subsystem call listProviders / getBootstrapDag /
  describeSubsystem and map transport/request/shape failures onto structured
  results. Still cap-blind — no kernel:list_capabilities.

Config: EXERIS_KERNEL_COMMAND (default mvn -q … exec:java
-Dexec.mainClass=…); operator-supplied, path-sandbox does not apply.

Verified: an opt-in integration test (EXERIS_KERNEL_IT=1) spawns the real CLI
and exercises all three tools end-to-end — passes. Findings folded into docs:
a java -jar override needs --enable-preview (Java 26 preview), listProviders
returns one provider per SPI domain, and stdout stays clean NDJSON (logs →
stderr). FakeChannel unit suite covers FIFO, 